# Engine

./: CMakeLists.txt  CMakePresets.json  SusiMachine.sln
Resources/Shaders/: testVert.vert
SusiMachine/: Shader.cpp  Shader.h  SusiMachine.vcxproj  SusiMachine.vcxproj.filters  main.cpp  makefile
SusiMachine/Resources/Shaders/: testFrag.frag  testVert.vert
SusiMachine/include/: Camera.h  Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  Object.h  Object.hpp  Shader.h  Texture.h  Texture.hpp
SusiMachine/src/: Camera.cpp  Material.cpp  Object.cpp  Shader.cpp  Texture.cpp  main.cpp
SusiMachine/x64/Debug/: SusiMachine.exe.recipe  SusiMachine.ilk  vc143.idb
SusiMachine/x64/Debug/SusiMachine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SusiMachine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: Material.hpp  Mesh.hpp  Model.hpp  Texture.hpp
lib/Glad/include/glad/: glad.h
lib/Glad/src/: glad.c
lib/assimp/5.4.3/: INSTALL_RECEIPT.json  sbom.spdx.json
src/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Object.cpp  Texture.cpp  main.cpp
x64/Debug/Resources/Shaders/: testFrag.frag  testVert.vert
